# sparselora

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/sparsity/: llama2-13b-csr.yaml  llama2-13b-dense.yaml  llama2-13b-math10k.yaml  llama2-7b-codefeedback.yaml  llama2-7b-csr.yaml  llama2-7b-dense.yaml  llama2-7b-math10k.yaml  llama3-8b-csr.yaml  llama3-8b-glue.yaml  llama3-8b-math10k.yaml  llama3.1-8b-arc-agi.yaml  llama3.1-8b-codefeedback.yaml
configs/train/: arc_agi_train.yaml  codefeedback_train.yaml  csr170k_train.yaml  glue_train.yaml  math10k_train.yaml  wizardlm_train.yaml
scripts/: arc_agi.sh  codefeedback.sh  csr170k.sh  glue.sh  math10k.sh  speedup.sh  wizardlm.sh
scripts/setup/: data.sh  environment_setup.sh  predictor.sh  setup.sh  svd_estimator.sh
spft/: api.py  callbacks.py  data.py
spft/modules/: __init__.py  attn.py  base.py  linear.py  linear4bit.py  mapping.py  mlp.py  pred.py  svd.py
spft/modules/unsloth/: __init__.py  attn.py  lora.py  mlp.py
spft/test/: code.py  main.py
spft/test/arc_agi/: arc_agi.py  eval_transduction_api.py
spft/train/: args.py  main.py  run_glue.py  speedup.py
spft/utils/: data.py  distributed.py  io.py  model.py  module.py  processor.py
tools/: analyze.py  merge.py  mt-bench.py  svd.py
tools/utils/: timer_util.py
